# gotgt

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gopkg.toml  Makefile  Makefile.am  README.md  autogen.sh  citadm.go  citd.go  configure.ac  go.mod  go.sum  gotgt.go
.github/workflows/: gotgt.yml
Godeps/: Godeps.json
ci/: ceph_install.sh  ceph_micro-osd.sh
cmd/: cmd.go  create.go  daemon.go  daemon_cgo.go  list.go  remove.go  version.go
examples/: config.json
hack/: verify-gofmt.sh
hack/ci/: ceph_install.sh  ceph_micro-osd.sh
mock/: remote.go  remote_test.go
pkg/api/: options.go  types.go
pkg/api/client/: client.go  client_unix.go  request.go  target_create.go  target_delete.go  target_list.go
pkg/apiserver/: api_installer.go  apiserver.go  handlers.go  router_swapper.go
pkg/apiserver/httputils/: form.go  httputils.go
pkg/apiserver/router/: router.go
pkg/config/: config.go
pkg/homedir/: homedir.go  lookup.go  lookup_unix.go  lookup_unsupported.go  user.go  user_test.go
pkg/port/: interfaces.go  service.go
pkg/port/iscsit/: auth.go  cmd.go  conn.go  iscsid.go  iscsit.go  login.go  logout.go  packet.go  portal.go  session.go  task.go
pkg/scsi/: backingstore.go  cmd.go  drivers.go  error.go  lun.go  sbc.go  sbc_test.go  scsi.go  scsi_pr.go  scsilumap.go  spc.go  spc_test.go  target.go
pkg/util/: util.go  util_darwin.go  util_linux.go
pkg/util/pool/: pool.go
pkg/version/: version.go
test/: README.md  gotgt-daemon.sh  libiscsi-gotgt-test.sh  openiscsi-gotgt-test.sh  setup-dev-test.sh  test-cleanup.sh
(+14 files in other folders)
